src/App.css
.App {
  align-items: center;
  width: 100%;
  height: 100vh;
  background-color: rgb(224, 220, 220);
}
.Header {
  display: flex;
  justify-content: space-between;
  width: 100%;
  height: 70px;
  background-color: rgb(185, 180, 180);
}
.MainContent {
  display: flex;
  justify-content: space-between;
  height: calc(100% - 75.7px);
  width: 100%;
}
.noteList {
  width: 20%;
  height: 100%;
  padding-right: 10px;
  padding-left: 10px;
  border: 3px solid rgb(211, 204, 204);
  overflow-y: auto;
}
.noteList::-webkit-scrollbar {
  background-color: aliceblue;
  height: 899.3px;
  width: 20px;
  border-radius: 10px;
  padding-right: 30px;
  padding-left: 30px;
}
.noteList::-webkit-scrollbar-thumb {
  width: 15px;
  height: 15px;
  border-radius: 10px;
  margin-right: 30px;
  margin-left: 30px;
  background-color: rgb(220, 220, 220);
}
.notes {
  border-bottom: 3px solid rgb(211, 204, 204);
  padding: 0px 10px 15px 20px;
}
.selectedNotes {
  border-bottom: 3px solid rgb(211, 204, 204);
  background-color: rgb(185, 180, 180);
  padding: 0px 10px 15px 20px;
}
.content {
  padding-right: 10px;
  width: 80%;
  height: 100%;
}
.contentDate {
  display: block;
  border: 3px solid rgb(211, 204, 204);
  border-bottom: 0px;
  margin: 0;
  font-size: 18px;
  font-weight: 550;
  width: calc(100% - 15px);
  resize: none;
  height: 49px;
  background-color: rgb(224, 220, 220);
}
.contentTitle {
  display: block;
  width: calc(100% - 15px);
  font-size: 27px;
  font-weight: bold;
  margin: 0;
  border: 3px solid rgb(211, 204, 204);
  border-top: 0px;
  border-bottom: 0px;
  resize: none;
  height: 68px;
  background-color: rgb(224, 220, 220);
}
.contentText {
  border: 3px solid rgb(211, 204, 204);
  border-top: 0px;
  display: block;
  font-size: 18px;
  font-weight: 550;
  margin: 0;
  width: calc(100% - 15px);
  resize: none;
  height: calc(100% - 130px);
  background-color: rgb(224, 220, 220);
}
.contentInList {
  overflow: hidden;
  width: 65px;
  height: 20px;
  padding-right: 10px;
  text-overflow: ellipsis;
}
.lastChangeInList {
}
textarea:focus {
  outline: none;
}
.listInfo {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.buttonsDiv {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-left: 10px;
}
.addNoteButton {
  height: 35px;
  width: 40px;
  border-radius: 10px;
  border: 1px solid rgb(151, 146, 146);
}
.deleteButton {
  height: 35px;
  width: 40px;
  margin-left: 10px;
  border-radius: 10px;
  border: 1px solid rgb(151, 146, 146);
}
.editNoteButton {
  height: 35px;
  width: 40px;
  margin-left: 10px;
  border-radius: 10px;
  border: 1px solid rgb(151, 146, 146);
}
.searchBox {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 10px;
}
.search {
  height: 13px;
  width: 270px;
  border-radius: 25px;
  border: 1px solid gray;
  padding: 10px;
  font-size: 18px;
  font-weight: 550;
}
.search:focus {
  outline: none;
}
::-webkit-input-placeholder {
  text-align: center;
}

:-moz-placeholder {
  text-align: center;
}

::-moz-placeholder {
  text-align: center;
}

:-ms-input-placeholder {
  text-align: center;
}

